added hystrix dashboard

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'poc-circuit-breaker-2'
 include 'discovery-server'
 include 'weather-server'
 include 'news-server-hystrix'
+include 'hystrix-dashboard'
