--- a/news-server-hystrix/src/main/resources/application.properties
+++ b/news-server-hystrix/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8082
 spring.application.name=news-server-hystrix
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.endpoint.health.enabled=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
