added traffic server

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include 'discovery-server'
 include 'weather-server'
 include 'news-server-hystrix'
 include 'hystrix-dashboard'
+include 'traffic-server'
