added resilience4j circuit breaker

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'weather-server'
 include 'news-server-hystrix'
 include 'hystrix-dashboard'
 include 'traffic-server'
+include 'news-server-resilience4j'
